--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
-    "dev": "nodemon .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon ."
   },
   "dependencies": {
+    "concurrently": "^4.1.0",
     "express": "^4.16.4",
-    "express-handlebars": "^3.0.2",
     "moment": "^2.24.0",
+    "mongoose": "^5.4.19",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/mongodb": "^3.1.22",
+    "@types/mongoose": "^5.3.23",
     "@types/node": "^11.11.6",
     "@types/uuid": "^3.4.4",
     "nodemon": "^1.18.10",
