--- a/client/.gitignore
+++ b/client/.gitignore
@@ -5,16 +5,11 @@
 /.pnp
 .pnp.js
 
-/client/node_modules
-/client/.pnp
-
-
 # testing
 /coverage
-/client/coverage
 
 # production
-/dist
+/build
 
 # misc
 .DS_Store
@@ -22,9 +17,6 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
-#keys
-/config
 
 npm-debug.log*
 yarn-debug.log*
