--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "shopping list built with the MERN stack, Mongo, Express, React, Node",
   "main": "index.ts",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "prebuild": "tslint -c tslint.json -p tsconfig.json –fix",
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
-    "server": "nodemon ."
+    "server": "nodemon .",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \" npm run client \" "
   },
   "dependencies": {
     "concurrently": "^4.1.0",
