--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^24.0.11",
+    "bootstrap": "^4.3.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
+    "react-transition-group": "^2.7.0",
+    "reactstrap": "^7.1.0",
     "tslint": "^5.14.0",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.3.4000",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,6 +31,8 @@
   "proxy": "http://localhost:5000",
   "devDependencies": {
     "@types/react": "^16.8.8",
-    "@types/react-dom": "^16.8.3"
+    "@types/react-dom": "^16.8.3",
+    "@types/jest": "^24.0.11",
+    "@types/reactstrap": "^7.1.3"
   }
 }
