--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
     "react-transition-group": "^2.7.0",
     "reactstrap": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "tslint": "^5.14.0",
     "typescript": "^3.3.4000",
     "uuid": "^3.3.2"
@@ -30,9 +33,10 @@
   ],
   "proxy": "http://localhost:5000",
   "devDependencies": {
+    "@types/jest": "^24.0.11",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
-    "@types/jest": "^24.0.11",
+    "@types/react-redux": "^7.0.5",
     "@types/reactstrap": "^7.1.3"
   }
 }
