--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "dev": "concurrently \"npm run server\" \" npm run client \" "
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
+    "config": "^3.0.1",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.19",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/config": "0.0.34",
     "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/mongodb": "^3.1.22",
     "@types/mongoose": "^5.3.23",
     "@types/node": "^11.11.6",
